# smitty

./: MANIFEST.in  README.rst  environment.yml  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
docs/smitty/: index.rst
smitty/: __init__.py  core.py
smitty/tests/: test_core.py
